<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TvShowsFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_tv_shows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/list_item"
        android:background="@color/quite_dark_yellow"/>


</FrameLayout>