...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_light_blue"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/quite_dark_yellow"
...
